--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./js/phaser.min.js"></script>
-    <title>Game</title>
+    <title>Raketka</title>
 </head>
 <body>
     <script type="module" src="./js/main.js"></script>
